test/assets/4/error-messages/incornsistent-indent2.txt
[1 of 1] Compiling Main             ( test\assets\4\incornsistent-indent2.hs, test\assets\4\incornsistent-indent2.o )

test\assets\4\incornsistent-indent2.hs:3:2: error:
    parse error on input ‘putStr’
  |
3 |  putStr (unlines (reverse (lines input)))
  |  ^^^^^^
